<?xml version="1.0" encoding="utf-8"?>

 <LinearLayout 
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:id="@+id/closeout"
       xmlns:android="http://schemas.android.com/apk/res/android">
       <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
		<TableLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" >
		
		    <TableRow >
		       <TextView android:padding="5dp" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="SRNo"></TextView>
			</TableRow>
		    <TableRow>
		       <EditText
		           android:id="@+id/txtCRNo"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:enabled="false"
		           android:ems="10" >
		       </EditText> 
		        
		    </TableRow>
		    <TableRow >
		       <TextView android:padding="5dp" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Pickup Items"></TextView>
			</TableRow>
		    <TableRow>
		       <EditText
		           android:id="@+id/txtComment"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:enabled="false"
		           android:ems="10" >
		       </EditText> 
		        
		    </TableRow>
		
		    <TableRow >
		        <TextView android:padding="5dp" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Status"></TextView>
		    </TableRow>
		    <TableRow>
				<Spinner
		        android:id="@+id/spStatus"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		         />
		    </TableRow>
		
		    <TableRow>
		       <TextView android:padding="5dp" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Date Complete"></TextView>
		   	</TableRow>
		   	<TableRow>
		       <DatePicker
		           android:id="@+id/datePicker1"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content" /> 
		    </TableRow>
		
		    <TableRow>
		        <TextView android:padding="5dp" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Completed By"></TextView>
		    </TableRow>
		    <TableRow>
		        <EditText
		           android:id="@+id/editText1"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:ems="8" >
		       </EditText> 
		    </TableRow>
		    
		    <TableRow>
		        <TextView android:padding="5dp" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Date Close"></TextView>
		     </TableRow>
		     <TableRow>
		        <DatePicker
		           android:id="@+id/datePicker2"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		            /> 
		        
		    </TableRow>
		    
		     <TableRow>
		        <TextView android:padding="5dp" android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="Notes"></TextView>
		     </TableRow>
		     <TableRow>
		       <Spinner
		            android:id="@+id/spNotes"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:textSize="10sp" />
		    </TableRow>		    
			<TableRow>
			    <Button
			        android:id="@+id/button1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:onClick="gotoPhotoPage"
			        android:text="@string/Take_Images" />
			</TableRow>
		    <TableRow>
		        <Button
			        android:id="@+id/button2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:onClick="Close_Ticket"
			        android:text="@string/Closeout" />
		    </TableRow>
		    
		    <TableRow>
		        <Button
			        android:id="@+id/button3"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:onClick="ReturnToRouteResult"
			        android:text="@string/ReturnToRouteResult" />
		    </TableRow>
		    <!--  
		     <TableRow>
		        <Button
			        android:id="@+id/button4"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:onClick="Save_Ticket"
			        android:text="@string/SaveTicket" />
		    </TableRow>
		    -->
		    <!-- dliu commented on 09/19/2014 
		    <TableRow >
		       <TextView android:padding="5dp" android:id="@+id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="EvdoDbm"></TextView>
			</TableRow>
		    <TableRow>
		        <EditText
		           android:id="@+id/txtDbm"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:enabled="false"
		           android:ems="10" >
		       </EditText> 
		    </TableRow>
		    -->
		</TableLayout>
		
		
	</ScrollView>
</LinearLayout>